@@ -18,7 +18,9 @@ if (! $ENV{PI_BOARD}){
 
 rpi_running_test(__FILE__);
 
-my $s = RPi::WiringPi->oled('128x64', 0x3C, 0);
+my $pi = RPi::WiringPi->new;
+
+my $s = $pi->oled('128x64', 0x3C, 0);
 
 for (1..5) {
     $s->clear;
@@ -29,6 +31,10 @@ for (1..5) {
 
 }
 $s->clear;
+$pi->cleanup;
+
+rpi_check_pin_status();
+rpi_metadata_clean();
 
 done_testing();
 
