@@ -18,7 +18,8 @@ if (! $ENV{PI_BOARD}){
 
 rpi_running_test(__FILE__);
 
-my $s = RPi::WiringPi->oled('128x64', 0x3C, 0);
+my $pi = RPi::WiringPi->new;
+my $s = $pi->oled('128x64', 0x3C, 0);
 
 $s->text_size(3);
 $s->string("hello", 1);
@@ -30,6 +31,11 @@ $s->string("hello", 1);
 
 $s->invert_display(0);
 $s->clear;
+
+$pi->cleanup;
+
+rpi_check_pin_status();
+rpi_metadata_clean();
 
 done_testing();
 
