@@ -18,7 +18,8 @@ if (! $ENV{PI_BOARD}){
 
 rpi_running_test(__FILE__);
 
-my $s = RPi::WiringPi->oled('128x64', 0x3C, 0);
+my $pi = RPi::WiringPi->new;
+my $s = $pi->oled('128x64', 0x3C, 0);
 
 for (1..3) {
 
@@ -40,6 +41,11 @@ for (1..3) {
     $s->display;
 }
 #$s->clear;
+
+$pi->cleanup;
+
+rpi_check_pin_status();
+rpi_metadata_clean();
 
 done_testing();
 
