@@ -18,12 +18,18 @@ if (! $ENV{PI_BOARD}){
 
 rpi_running_test(__FILE__);
 
-my $s = RPi::WiringPi->oled('128x64', 0x3C, 0);
+my $pi = RPi::WiringPi->new;
+my $s = $pi->oled('128x64', 0x3C, 0);
 
 is $s->horizontal_line(0, 32, 128), 1, "horizontal_line() return ok";
 $s->display;
 
 $s->clear;
+
+$pi->cleanup;
+
+rpi_check_pin_status();
+rpi_metadata_clean();
 
 done_testing();
 
